# streamClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
include/headers/: authentificator.h  client.h  receiver.h  sender.h  serializer.h  stream_client.h  ui_controller.h
include/ui/: mainClientWindow.qml  startWindow.qml
sources/: authentificator.cpp  client.cpp  receiver.cpp  sender.cpp  serializer.cpp  stream_client.cpp  thread_pool.cpp  ui_controller.cpp
